--- a/renovate.json
+++ b/renovate.json
@@ -15,7 +15,11 @@
         "packagePatterns": ["^rust-lang/"],
         "updateTypes": ["minor", "patch"],
         "packageFile": ["Cargo.toml"]
+      },
+      {
+        "packageFile": ["test.yaml"],
+        "updateTypes": ["minor", "patch"]
       }
     ]
-  }
+}
   
