--- a/renovate.json
+++ b/renovate.json
@@ -1,25 +1,10 @@
 {
     "extends": ["config:base"],
     "packageRules": [
-      {
-        "packagePatterns": ["^golang.org/x/"],
-        "updateTypes": ["minor", "patch"],
-        "packageFile": ["go.mod"]
-      },
-      {
-        "packagePatterns": ["^github.com/"],
-        "updateTypes": ["minor", "patch"],
-        "packageFile": ["go.mod"]
-      },
-      {
-        "packagePatterns": ["^rust-lang/"],
-        "updateTypes": ["minor", "patch"],
-        "packageFile": ["Cargo.toml"]
-      },
-      {
-        "packageFile": ["test.yaml"],
-        "updateTypes": ["minor", "patch"]
-      }
-    ]
+        {
+          "matchUpdateTypes": ["minor", "patch", "pin", "digest"],
+          "requiredStatusChecks": null,
+          "automerge": true
+        }
+      ]
 }
-  
