--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -1,10 +1,22 @@
 {
-    "extends": ["config:base"],
+  "$schema": "https://docs.renovatebot.com/renovate-schema.json",  
+  "extends": ["config:base"],
+    "includePaths": [
+      "test.yaml"
+    ],
     "packageRules": [
         {
-          "matchUpdateTypes": ["minor", "patch", "pin", "digest"],
-          "requiredStatusChecks": null,
-          "automerge": true
+          "matchFiles": [
+            "test.yaml"
+          ],
+          "matchUpdateTypes": [
+            "major",
+            "minor",
+            "digest",
+            "patch",
+            "pin",
+            "pinDigest"
+          ]
         }
     ],
     "regexManagers": [
