--- a/test.yaml
+++ b/test.yaml
@@ -1,3 +1,3 @@
 # renovate: datasource=docker depName=golangci/golangci-lint
-GOLANGCILINT_WANT_VERSION = v1.55.0
-GOLANGCILINT_IMAGE_SHA = sha256:asdasdasd
+GOLANGCILINT_WANT_VERSION = v1.52.1
+GOLANGCILINT_IMAGE_SHA = sha256:asdasdasdsad
