--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -18,6 +18,15 @@
       "matchDepNames": [
         "golangci/golangci-lint"
       ]
+    },
+    {
+      "enabled": "false",
+      "matchFiles": [
+        "test.yaml"
+      ],
+      "matchDepNames": [
+        "go"
+      ]
     }
   ],
   "regexManagers": [
