--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -22,7 +22,7 @@
     {
       "enabled": "false",
       "matchFiles": [
-        "test.yaml"
+        "aa.yaml"
       ],
       "matchDepNames": [
         "go"
