--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -34,7 +34,7 @@
         "^Makefile\\.defs$"
       ],
       "matchStrings": [
-        "# renovate: datasource=(?<datasource>.*?) depName=(?<depName>.*?)\\s+.+_VERSION = (?<currentValue>.*)\\s+.+_SHA = (?<currentDigest>sha256:[a-f0-9]+)"
+        "# renovate: datasource=(?<datasource>.*?) depName=(?<depName>.*?)\\s+.+VERSION = (?<currentValue>.*)\\s+.+SHA = (?<currentDigest>sha256:[a-f0-9]+)"
       ]
     },
     {
