--- a/Makefile.defs
+++ b/Makefile.defs
@@ -165,14 +165,14 @@ GOLANGCILINT_IMAGE_SHA = sha256:e699df940be1810b08ba6ec050bfc34cc1931027283b5a7f
 # 本地golangci-lint工具版本
 GOLANGCILINT_VERSION = $(shell golangci-lint version --format short 2>/dev/null)
 ##@ GoLint
-golangci-lint: make_sure_go_workdir ## Run golangci-lint
+golangci-lint: ## Run golangci-lint
 ifneq (,$(findstring $(GOLANGCILINT_WANT_VERSION:v%=%),$(GOLANGCILINT_VERSION)))
 	golangci-lint run $(GOLANGCI_LINT_ARGS)
 else
 	$(CONTAINER_ENGINE) run --rm -v `pwd`:/app -w /app docker.io/golangci/golangci-lint:$(GOLANGCILINT_WANT_VERSION)@$(GOLANGCILINT_IMAGE_SHA) golangci-lint run $(GOLANGCI_LINT_ARGS)
 endif
 
-golangci-lint-fix: make_sure_go_workdir ## Run golangci-lint to automatically fix warnings
+golangci-lint-fix: ## Run golangci-lint to automatically fix warnings
 	$(QUIET)$(MAKE) golangci-lint GOLANGCI_LINT_ARGS="--fix"
 
 lint: golangci-lint ## Run golangci-lint
