--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -37,7 +37,7 @@
       ],
       "matchStrings": [
         "# renovate: datasource=(?<datasource>.*?) depName=(?<depName>.*?)\\s+.+VERSION = (?<currentValue>.*)\\s+.+SHA = (?<currentDigest>sha256:[a-f0-9]+)",
-        "# renovate: datasource=(?<datasource>.*?) depName=(?<depName>.*?)\\s+.+VERSION = (?<currentValue>.*)
+        "# renovate: datasource=(?<datasource>.*?) depName=(?<depName>.*?)\\s+.+VERSION = (?<currentValue>.*)"
       ]
     },
     {
