--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -36,8 +36,8 @@
         "^Makefile\\.defs$"
       ],
       "matchStrings": [
-        "# renovate: datasource=(?<datasource>.*?) depName=(?<depName>.*?)\\s+.+VERSION = (?<currentValue>.*)\\s+.+SHA = (?<currentDigest>sha256:[a-f0-9]+)",
-        "# renovate: datasource=(?<datasource>.*?) depName=(?<depName>.*?)\\s+.+VERSION = (?<currentValue>.*)"
+        "# renovate: datasource=(?<datasource>.*?) depName=(?<depName>.*?)\\s+.+VERSION .*= (?<currentValue>.*)",
+        "# renovate: datasource=(?<datasource>.*?) depName=(?<depName>.*?)\\s+.+VERSION .*= (?<currentValue>.*)\\s+.+SHA = (?<currentDigest>sha256:[a-f0-9]+)",
       ]
     },
     {
